hamburger fixed on mobile

--- a/src/components/UserNavbar/UserNavbar.module.css
+++ b/src/components/UserNavbar/UserNavbar.module.css
@@ -184,6 +184,7 @@ button.hoverUnderline:hover, .hoverUnderline:hover{
 
     .hamburger{
         display: flex;
+        gap: 7px;
     }
 
     .line{
